[package]
name = "stm32-ws2812"
version = "0.1.0"
authors = ["Leah <leah@hrmny.sh>"]
edition = "2018"

[dependencies]
bare-metal = "0.2"
cortex-m = "0.5.8"
cortex-m-rt = "0.6.6"
cortex-m-semihosting = "0.3.1"
panic-halt = "0.2"
stm32l4xx-hal = {version = "0.5", features = ["stm32l4x6", "rt"]}
smart-leds = "0.3"
ws2812-spi = "0.2"
ws2812-timer-delay = {version = "0.3.0", features = []}
panic-semihosting = "0.5"
embedded-hal = "0.2"
nb = "0.1"

